@@ -14,6 +14,8 @@
             Puck.js: Ensure acc/gyro doesn't cause watch events to be added to the input queue (more efficient)
             Waveform: Fix waveform input/output when not done at system start - Since 2v13 start time was set in the past
             Fix ordering of Pin check in wrapper (so autocomplete and Pin prototype works)
+            Bangle.js2: Switched to 'hard' float abi from 'soft' (needed for proprietary hrm algorithm)
+            Bangle.js2: Switched to proprietary heart rate algorithm (from our Open Source version). It just works better. 
 
      2v17 : Bangle.js: When reading file info from a filename table, do it in blocks of 8 (20% faster file search)
             Bangle.js2: Increase flash buffer size from 16->32 bytes (5% performance increase)
